Fixed a bunch of inspection issues.