@@ -61,7 +61,7 @@ public class SmartyAdsBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("ext.bidder not provided");
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("ext.bidder not provided");
     }
 
     @Test
@@ -118,7 +118,7 @@ public class SmartyAdsBidderTest extends VertxTest {
         // then
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue()).hasSize(1);
-        assertThat(result.getValue().get(0).getUri())
+        assertThat(result.getValue().getFirst().getUri())
                 .isEqualTo("http://testHost.test.com/bid?param1=testSourceId&param2=testAccountId");
     }
 
